# value-steering

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  vllm_compat.yml
.github/workflows/: ci.yml  release.yml
docs/: cluster-setup.md  training-a-value-head.md
examples/: README.md
examples/research/: behavioral_sweep.sbatch  behavioral_sweep.sh  behavioral_sweep_h100.sbatch  calib_investigate.sbatch  candidate_hidden_diag.sbatch  coherence_check.sbatch  decode_smoke.sbatch  feature_decode_diag.sbatch  feature_parity_diag.sbatch  isolate_compile.sbatch  isolate_compile_bigN.sbatch  isolate_compile_judge.sbatch  mutation_test.sbatch  profile_K.sbatch  safety_eval_compiled.sbatch  safety_judge_compiled.sbatch  safety_sweep.sbatch  safety_sweep_compiled.sbatch  safety_sweep_compiled_judge.sbatch  safety_sweep_judge.sbatch  smoke_train.sbatch  speed_K.sbatch  test_new_head.sbatch  token_diag.sbatch  version_sweep.sh
examples/slurm/: canonical_eval.sbatch  canonical_eval_full.sbatch  decode_pipeline.sbatch  full_retrain.sbatch  gpu_validate.sbatch  gpu_validate_h100.sbatch  real_model_validate.sbatch  safety_eval.sbatch  safety_judge.sbatch  train_canonical.sbatch  train_only.sbatch  train_value_head.sbatch  vfd_profile.sbatch  vfd_vs_base.sbatch
scripts/: calib_analyze.py  calibrate_threshold.py  candidate_hidden_diag.py  coherence_check.py  dataset_loaders.py  decode_extract.py  decode_feature_diag.py  feature_parity_diag.py  gen_value_data.py  gpu_diag.py  hang_probe.py  mutation_test.py  real_model_validate.py  safety_eval.py  token_diag.py  train_value_head.py  value_verifiers.py  vfd_profile.py  vllm_extract.py
tests/: test_calibration.py  test_gpu_behavioral.py  test_gpu_smoke.py  test_scratch_alloc.py  test_steering.py  test_train_probe.py  test_verifiers.py  test_versions.py
value_steer/: __init__.py  abstention_model_runner.py  calibration.py  compat_check.py  scratch_alloc.py  steering_ops.py  train_probe.py  validated_versions.json  value_probe.py  verifiers.py  versions.py  vfd_model_runner.py  worker.py
